# SRuntime

./: CMakeLists.txt  instruction.h  main.cpp  virtualMachine.cpp  virtualMachine.h
Types/: Value.cpp  Value.h
include/: binary_reader.hpp  sabaka_types.hpp  virtual_machine.hpp
src/: binary_reader.cpp  main.cpp  sabaka_types.cpp  tests.cpp  virtual_machine.cpp
